--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					<footer id="footer">
 						</dl>
 							<ul class="icons">
-								<li><a href="https://github.com/Rie-D" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+								<li><a href="https://github.com/riedesta" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 								<li><a href="https://www.linkedin.com/in/rie-d-2a5010193" class="icon brands fa-linkedin alt"><span class="label">linkedin</span></a></li>
 							</ul>
 						</section>
