--- a/elements.html
+++ b/elements.html
@@ -125,7 +125,7 @@
 								<dd><a href="mailto:riedesta@gmail.com">riedesta@gmail.com</a></dd>
 							</dl>
 							<ul class="icons">
-								<li><a href="https://github.com/" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+								<li><a href="https://github.com/riedesta" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
 								<li><a href="https://www.linkedin.com/in/rie-d-2a5010193" class="icon brands fa-linkedin alt"><span class="label">linkedin</span></a></li>
 							</ul>
 						</section>
