--- a/generic.html
+++ b/generic.html
@@ -36,9 +36,9 @@
 								<p>I promise that I'll do my best at a new job in my new world! <span style="font-style:italic;">"Hello, My New World!"</span></p>
 								<h2>Job Experience</h2>
 								<ul>
-									<li>IBM Japan Staff Operations Co., Ltd.<br>Operations Staff<br>Jul 2009 - Jun 20112 2 years<br>Okinawa, Japan</li><br>
-									<li>LENOVO JAPAN, LTD.<br>Operations Staff<br>Aug 2005 - Mar 20093 years 8 months<br>Okinawa, Japan</li><br>
-									<li>IBM Japan e-Communications Co.,Ltd.<br>Call Center Customer Service<br>Oct 2004 - Jul 2005 10 months<br>Okinawa, Japan</li>
+									<li>IBM Japan Staff Operations Co., Ltd.<br>Operations Staff<br>Jul 2009 - Jun 20112 (2 years)<br>Okinawa, Japan</li><br>
+									<li>LENOVO JAPAN, LTD.<br>Operations Staff<br>Aug 2005 - Mar 20093 years (8 months)<br>Okinawa, Japan</li><br>
+									<li>IBM Japan e-Communications Co.,Ltd.<br>Call Center Customer Service<br>Oct 2004 - Jul 2005 (10 months)<br>Okinawa, Japan</li>
 								</ul>
 								<h2>Education</h2>
 								<ul>Osaka Seikei college Japan<br>(Associate degree) Tourism<br>1993 - 1995</ul>
