--- a/generic.html
+++ b/generic.html
@@ -44,7 +44,7 @@
 								<ul>Osaka Seikei college Japan<br>(Associate degree) Tourism<br>1993 - 1995</ul>
 								<h2>Certifications</h2>
 								<ul>
-									<li><a href="https://coursera.org/share/27fbdb26f17a8d32a0e89e39f4e3ccc0"><b>Google Data Analytics<b></a><br>Coursera<br>Issued Jan 2023<br>Credential ID MB3P2NGQR562</li>
+									<li><a href="https://coursera.org/share/27fbdb26f17a8d32a0e89e39f4e3ccc0">Google Data Analytics</a><br>Coursera<br>Issued Jan 2023<br>Credential ID MB3P2NGQR562</li>
 									<li><a href="https://coursera.org/share/334c9a04bbd2df88691f5f1b87f6628a">IBM Data Science</a><br>Coursera<br>Issued Nov 2021<br>Credential ID FPC9NUFHET5L</li>
 									<li><a href="https://coursera.org/share/761fe2b25f87b9a02ac66ebbc90ec213">IBM Data Analyst</a><br>Coursera<br>Issued May 2021<br>Credential ID 3T3XAZXULB9T</li>
 									<li><a href="https://coursera.org/share/8d3c220299dbddc9d830f082a8b18e99">Excel Skills for Business Specialization</a><br>Coursera<br>Issued Nov 2019<br>Credential ID 49CGY8BL9KUV</li><br>
