--- a/generic.html
+++ b/generic.html
@@ -47,7 +47,7 @@
 									<li><a href="https://coursera.org/share/27fbdb26f17a8d32a0e89e39f4e3ccc0">Google Data Analytics</a><br>Coursera<br>Issued Jan 2023<br>Credential ID MB3P2NGQR562</li>
 									<li><a href="https://coursera.org/share/334c9a04bbd2df88691f5f1b87f6628a">IBM Data Science</a><br>Coursera<br>Issued Nov 2021<br>Credential ID FPC9NUFHET5L</li>
 									<li><a href="https://coursera.org/share/761fe2b25f87b9a02ac66ebbc90ec213">IBM Data Analyst</a><br>Coursera<br>Issued May 2021<br>Credential ID 3T3XAZXULB9T</li>
-									<li><a href="https://coursera.org/share/8d3c220299dbddc9d830f082a8b18e99">Excel Skills for Business Specialization</a><br>Coursera<br>Issued Nov 2019<br>Credential ID 49CGY8BL9KUV</li><br>
+									<li><a href="https://coursera.org/share/8d3c220299dbddc9d830f082a8b18e99">Excel Skills for Business Specialization</a><br>Coursera<br>Issued Nov 2019<br>Credential ID 49CGY8BL9KUV</li>
 									<li><a href="https://www.udemy.com/certificate/UC-dcf711df-2772-4456-9675-30edfa50e4df/">Google Sheets - The Comprehensive Masterclass</a><br>Udemy<br>Issued Apr 2022<br>Credential ID UC-dcf711df-2772-4456-9675-30edfa50e4df</li>
 									<li><a href="https://www.udemy.com/certificate/UC-f2ce2c3e-47ae-44d8-b99c-b228bf4fae6e/">Advanced Excel: Top Excel Tips & Formulas</a><br>Udemy<br>Issued May 2020<br>Credential ID UC-f2ce2c3e-47ae-44d8-b99c-b228bf4fae6e</li>
 									<li><a href="https://www.udemy.com/certificate/UC-15cd0d5f-efad-4cfd-9fc9-38e126cdc205/">Excel Essentials for the Real World (Complete Excel Course)</a><br>Udemy<br>Issued Feb 2020<br>Credential ID UC-15cd0d5f-efad-4cfd-9fc9-38e126cdc205</li>
