--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<title>Rie Y Desta</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="shortcut icon" href= "favicon.ico" type="image/vnd.microsoft.icon" />
-		<noscript><link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon" /></noscript>
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
