--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 		<title>Rie Y Desta</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="shortcut icon" type="image/x-icon" href="favicon (1).ico">
+		<link rel="shortcut icon" type="image/x-icon" href="favicon (1).ico"/>
+		<noscript><link rel="shortcut icon" type="image/x-icon" href="favicon (1).ico" /></noscript>
 		
 		
 	</head>
