--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
 						<!-- Second Section -->
 							<section id="second" class="main special">
 								<header class="major">
-									<h2>Contact</h2>
+									<h2>More Info</h2>
 										<dl class="alt">
 											<dt>Address: </dt>
 											<dd>San Diego, CA 92127 &bull; USA</dd>
-											<dt>Email</dt>
-											<dd><a href="mailto:riedesta@gmail.com">riedesta@gmail.com</a></dd>
+											<dt></dt>
+											<dd><a/a></dd>
 											
 												
 										</dl>
