--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<ul>
 							<li><a href="#intro" class="active">About Me</a></li>
 							<li><a href="#first">Projects</a></li>
-							<li><a href="#second">Contact</a></li>
+							<li><a href="#second">More Info</a></li>
 						</ul>
 					</nav>
 
