--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<span class="logo"><img src="images/logo_RD3.PNG" alt="" width="50" height="50" /></span>
-						<h1><span style="font-weight:bold;">Hi, I'm Rie</span> [rié]<span style="font-weight:bold;"> !</h1>
+						<h1><span style="font-weight:bold;">Hi, I'm Rie</span> ["Lee-A"]<span style="font-weight:bold;"> !</h1>
 						<p>Data analyst</p>
 					</header>
 
