--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									<h2>More Info</h2>
 										<dl class="alt">
 											<dt>Address: </dt>
-											<dd>San Diego, CA 92127 &bull; USA</dd>
+											<dd>San Diego, CA &bull; USA</dd>
 											<dt></dt>
 											<dd><a/a></dd>
 											
