--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
 								<header class="major">
 									<h2>More Info</h2>
 									<p><storong>Address:</storong> San Diego, CA &bull; USA</p>
+								<ul class="actions">
+									<li><a href="#" class="button">Top</a></li>
+								</ul>
 										
 								</header>	
 							</section>
