--- a/index.html
+++ b/index.html
@@ -98,14 +98,16 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<ul class="actions">
-							<li><a href="#" class="button">Top</a></li>
-						</ul>
+						<div class="footer-content">
+							<ul class="actions">
+								<li><a href="#" class="button">Top</a></li>
+							</ul>
 						
-						<ul class="icons">
-							<li><a href="https://github.com/riedesta" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
-							<li><a href="https://www.linkedin.com/in/rie-d-2a5010193" class="icon brands fa-linkedin alt"><span class="label">linkedin</span></a></li>	
-						</ul>
+							<ul class="icons">
+								<li><a href="https://github.com/riedesta" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/rie-d-2a5010193" class="icon brands fa-linkedin alt"><span class="label">linkedin</span></a></li>	
+							</ul>
+						</div>
 	
 						
 						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
