--- a/elements.html
+++ b/elements.html
@@ -23,6 +23,7 @@
 					<header id="header">
 						<h1>Projects</h1>
 						<p>Case Study</p>
+						<a href="index.html" class="button">Main</a>
 					</header>
 
 				<!-- Main -->
