--- a/generic.html
+++ b/generic.html
@@ -23,6 +23,7 @@
 					<header id="header">
 						<h1>Rie Desta</h1>
 						<p>About Me</p>
+						<a href="index.html" class="button">Main<a/>
 					</header>
 
 				<!-- Main -->
