--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
 										<h3>Google Sheets</h3>
 									</li>
 									<li>
-										<span class="icon major style5 fa-chart-bar"></span>
+										<a href="https://public.tableau.com/views/CaseStudy2_17405243256180/visualanalytics?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="icon-link">
+											<span class="icon major style5 fa-chart-bar"></span>
+										</a>
 										<h3>Tableau</h3>
 									</li>
 								</ul>
