--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										<h3>Google Sheets</h3>
 									</li>
 									<li>
-										<a href="https://public.tableau.com/views/CaseStudy2_17405243256180/visualanalytics?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="icon-link">
+										<a href="https://public.tableau.com/views/CaseStudy2_17405243256180/visualanalytics?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="icon-link" title="Dashboards">
 											<span class="icon major style5 fa-chart-bar"></span>
 										</a>
 										<h3>Tableau</h3>
