--- a/elements.html
+++ b/elements.html
@@ -108,7 +108,7 @@
 										<p><h3><b>Bellabeat Analysis (Dashboard)</b></h3></p>
 										<span class="image fit"><img src="images/Tableau_Dash.png" alt=""></span>
 										<li style="list-style: none; padding: 0; text-align: center">
-											<a href="https://public.tableau.com/views/CaseStudy2_17405243256180/visualanalytics?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="button"> More Analysis</a>
+											<a href="https://public.tableau.com/views/CaseStudy2_17405243256180/visualanalytics?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" class="button"> More Dashboard</a>
 										</li>
 									</section>
 										<hr />
