--- a/generic.html
+++ b/generic.html
@@ -35,7 +35,7 @@
 								<h2>Introduce</h2>
 								<p>I have experience working on Excel to create new data from raw data. From that base of my experience, I was interested in data, and would like to get a new skill set for it. The first step was to open the door of IBM Data Analyst Professional Certificate. I learned how to analyze data with mostly Python, and also proceeded to the course IBM Data Science Professional Certificate. I realized that Data science was too high level for my skill but it was a good opportunity to learn about data deeper inside. After that, I tried again to learn more about Data Analytics with the Google Professional Certificate course. This course has different tools to analyze data from the IBM course. It's R programming. This was another new world for my skill experiences, I was really interested in it.
 								</p>
-								<p>After I learned about data in those courses, I liked data visualization and dashboards with Excel, Cognos, and Tableau. I think I might not yet have enough skills to analyze data precisely now. But I would be proud of myself to finish the learning courses in an effort.</p>
+								<p>After I learned about data in those courses, I liked data visualization and dashboards with Excel, Cognos, and Tableau. I think I might not yet have enough skills to analyze data precisely now. But I would be proud of myself for finishing the learning courses in an effort.</p>
 								<p>I promise that I'll do my best at a new job in my new world! <span style="font-style:italic;">"Hello, My New World!"</span></p>
 								<h2>Job Experience</h2>
 								<ul>
@@ -47,6 +47,7 @@
 								<ul>Osaka Seikei college Japan<br>(Associate degree) Tourism<br>1993 - 1995</ul>
 								<h2>Certifications</h2>
 								<ul>
+									<li><a href="https://lms.quickstart.com/lms/rest/certificate/382334/exam_preparation_for_microsoft_power_bi_data_analyst__pl_300__.pdf">Exam preparation for Microsoft Power BI Data Analyst (PL-300)</a><br>QuickStart Inc.<br>Issued Oct 2025<br>Credential ID ‭000000382334</li>
 									<li><a href="https://coursera.org/share/27fbdb26f17a8d32a0e89e39f4e3ccc0">Google Data Analytics</a><br>Coursera<br>Issued Jan 2023<br>Credential ID MB3P2NGQR562</li>
 									<li><a href="https://coursera.org/share/334c9a04bbd2df88691f5f1b87f6628a">IBM Data Science</a><br>Coursera<br>Issued Nov 2021<br>Credential ID FPC9NUFHET5L</li>
 									<li><a href="https://coursera.org/share/761fe2b25f87b9a02ac66ebbc90ec213">IBM Data Analyst</a><br>Coursera<br>Issued May 2021<br>Credential ID 3T3XAZXULB9T</li>
@@ -60,7 +61,7 @@
 									<li>Japanese<br>Native or bilingual proficiency</li>
 									<li>English<br>Limited working proficiency</li>
 								</ul>
-								<p>I have experience with Excel in most of my jobs. Because it took a long time to get back to work since I left my last job, I'm trying to catch up my skills by taking the online course. And I opened the new "door" of Data Analytics/Science.</p>
+								<p>I have experience with Excel in most of my jobs. Because it took a long time to get back to work since I left my last job, I'm trying to catch up on my skills by taking the online course. And I opened the new "door" of Data Analytics/Science.</p>
 							</section>
 
 					</div>
@@ -101,3 +102,4 @@
 
 	</body>
 </html>
+
